// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logToDetails many groups 1`] = `
"<details>
<summary>One</summary>

\`\`\`
one

\`\`\`

</details>
<details>
<summary>Two</summary>

\`\`\`
two

\`\`\`

</details>"
`;

exports[`logToDetails many groups with whitespace 1`] = `
"<details>
<summary>One</summary>

\`\`\`
one

\`\`\`

</details>
<details>
<summary>Two</summary>

\`\`\`
two

\`\`\`

</details>"
`;

exports[`logToDetails missing endgroup 1`] = `
"<details>
<summary>One</summary>

\`\`\`
one

\`\`\`

</details>
<details>
<summary>Two</summary>

\`\`\`
two

\`\`\`

</details>"
`;

exports[`logToDetails no name 1`] = `
"<details>
<summary>Details</summary>

\`\`\`
one

\`\`\`

</details>"
`;

exports[`logToDetails one group 1`] = `
"<details>
<summary>One</summary>

\`\`\`
one

\`\`\`

</details>"
`;

exports[`logToDetails with special characters 1`] = `
"<details>
<summary>One</summary>

\`\`\`
one
1
-->>--=

\`\`\`

</details>
<details>
<summary>Two</summary>

\`\`\`
two

\`\`\`

</details>"
`;
